--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,4 +19,6 @@ div#wall .parent #tag-5.slick {
   display: none;
 }
 
-div#wall div.parent div#tag-6
+div#wall div.parent div#tag-6 {
+  display: none;
+}
