--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,6 +19,6 @@ div#wall .parent #tag-5.slick {
   display: none;
 }
 
-div#wall div.parent div:last-child {
+div#wall div.parent div:last-child#tag-6 {
   display: none;
 }
