--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,6 +19,6 @@ body #wall #tag-2 {
   display: none;
 }
 
-#wall .parent div:last-child div:first-child#tag-6 {
+#wall .parent :last-child :first-child#tag-6 {
   display: none;
 }
