--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,7 +19,7 @@ body #wall #tag-2 {
   display: none;
 }
 
-#wall .parent :last-child :first-child#tag-6 {
+div#wall div.parent div:last-child div:first-child#tag-6 {
   display: none;
 }
 
