--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -23,6 +23,6 @@ div#wall div.parent div:last-child div:first-child#tag-6 {
   display: none;
 }
 
-#wall.parent#tag-7.slick {
+#wall div.parent#tag-7.slick {
   display: none;
 }
