--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -23,6 +23,6 @@ div#wall div.parent div:last-child div:first-child#tag-6 {
   display: none;
 }
 
-#wall div:last-child.parent #tag-7.slick {
+#wall div:last-child.parent div > #tag-7.slick {
   display: none;
 }
