--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,11 +11,11 @@ body #wall #tag-2 {
   display: none;
 }
 
-div#wall .parent #tag-4 {
+#wall .parent #tag-4 {
   display: none;
 }
 
-#wall .parent #tag-5.slick {
+div#wall .parent #tag-5.slick {
   display: none;
 }
 
