--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,7 +15,7 @@ body #wall #tag-2 {
   display: none;
 }
 
-div#wall .parent #tag-5.slick {
+div#wall div.parent #tag-5.slick {
   display: none;
 }
 
