--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,7 +19,7 @@ div#wall .parent div#tag-5.slick {
   display: none;
 }
 
-div#wall div.parent div:last-child div:first-child#tag-6 {
+div#wall {
   display: none;
 }
 
