--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,7 +19,7 @@ div#wall .parent div#tag-5.slick {
   display: none;
 }
 
-body div#wall div.parent {
+body div#wall div.parent div:last {
   display: none;
 }
 
